// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CursorExporter > All Severities > handles error, warn, and info severities 1`] = `
"---
---
## Rule: critical.security

**Severity:** error

**Applies to:**
- \`**/*\`

Security violations must be fixed immediately.

## Rule: important.performance

**Severity:** warn

**Applies to:**
- \`**/*.ts\`

Performance issues should be addressed.

## Rule: nice-to-have.style

**Severity:** info

**Applies to:**
- \`**/*.ts\`

Style suggestions to consider.

---

**Generated by AlignTrue**
Content Hash: 2a6387a634d72507de5318d2b427408fb68253f49b749eacfd63e5c14641307e

**Fidelity Notes:**
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;

exports[`CursorExporter > Basic Export > exports multiple rules to single .mdc file 1`] = `
"---
globs:
  - "**/*.ts"
---
## Rule: testing.require-tests

**Severity:** error

**Applies to:**
- \`**/*.ts\`

All features must have tests.

## Rule: docs.update-readme

**Severity:** warn

**Applies to:**
- \`README.md\`

Keep the README up to date with changes.

## Rule: style.use-prettier

**Severity:** info

**Applies to:**
- \`**/*.{ts,tsx,js,jsx}\`

Use Prettier for consistent formatting.

---

**Generated by AlignTrue**
Content Hash: d954ad21d774bd62ac390ea1a129c1562e95e88f37c788d6dae11c9a855fd49b

**Fidelity Notes:**
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;

exports[`CursorExporter > Basic Export > exports single rule to .mdc file 1`] = `
"---
globs:
  - "**/*.ts"
  - "**/*.tsx"
---
## Rule: testing.require-tests

**Severity:** warn

**Applies to:**
- \`**/*.ts\`
- \`**/*.tsx\`

All features must have tests to ensure reliability.
Write tests alongside your code, not as an afterthought.

---

**Generated by AlignTrue**
Content Hash: b5863c347584981538548645931a88434da355d13b49dd8fa967d014cff93a14

**Fidelity Notes:**
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;

exports[`CursorExporter > Vendor.cursor Metadata Extraction > extracts vendor.cursor fields to frontmatter 1`] = `
"---
globs:
  - "**/*.ts"
cursor:
  testing.require-tests:
    ai_hint: "Suggest test scaffolding with vitest"
    session_metadata: {"created":"2024-01-01"}
---
## Rule: testing.require-tests

**Severity:** warn

**Applies to:**
- \`**/*.ts\`

All features must have tests.

---

**Generated by AlignTrue**
Content Hash: ed1066f40a1ccbd03f2d70e0208f5c9c98849eefa099e178fa0b68f9e8a96fa8

**Fidelity Notes:**
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;

exports[`CursorExporter > Vendor.cursor Metadata Extraction > handles mixed vendor namespaces 1`] = `
"---
globs:
  - "**/*.ts"
cursor:
  testing.require-tests:
    ai_hint: "Suggest vitest"
---
## Rule: testing.require-tests

**Severity:** warn

**Applies to:**
- \`**/*.ts\`

All features must have tests.

---

**Generated by AlignTrue**
Content Hash: 05fd2404a9ed47abbf2e72e46806d849489921e91fa2910f35fb095a0463de29

**Fidelity Notes:**
- Vendor metadata for other agents preserved but not active: copilot, vscode
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;
